# test_programmingbitcoin

./: README.md
newbitcoin/: pyproject.toml
newbitcoin/newbitcoin/code/: Chapter2.ipynb  ecc.py  exercise.py  exercise3_1.py  op.py  script.py
newbitcoin/newbitcoin/code-ch01/: Chapter1.ipynb  ecc.py  exercise.py
newbitcoin/newbitcoin/code-ch02/: Chapter2.ipynb  ecc.py  exercise.py  exercise3_1.py  exercise3_2.py  helper.py
newbitcoin/newbitcoin/code-ch03/: ecc.py  exercise3_4.py
newbitcoin/tests/: test_newbitcoin.py
