[tool.poetry]
name = "newbitcoin"
version = "0.1.0"
description = ""
authors = ["tys-hiroshi <tashiro.hiroshi@toyoko-sys.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
